# axum-crud-test

./: .rustfmt.toml  .typos.toml  Cargo.toml  create-certificates.sh
.github/workflows/: build-test.yml  ci.yml  linters.yml
ci/: check-licenses.sh  find-sources.sh  repository-health.sh
src/: main.rs
src/business/: error.rs  flat_client_config.rs  game_features.rs  game_servers.rs  leads.rs  mod.rs  result.rs  shop.rs
src/webapi/: auth.rs  error.rs  flat_client_config.rs  game_features.rs  json_helper.rs  leads.rs  mod.rs  shop.rs
tests/: colors.sh  create-leader.sh  run-tests.sh  test-functions.sh  testlib.sh
tests/flat-client-config/: erase.sh  update.sh
tests/game-features/: update.sh
tests/leads/: create-leader.sh
tests/shop/: update.sh
