[package]
name = "axum-crud-test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
deadpool-postgres = "0.14.1"
tokio-postgres = "0.7.15"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = [ "trace" ] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }